# mds-moderator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  NOTES.md  OWNERS  Pipfile  README.md  bot.py  bot_runner.py  fly.toml  install_deps.py  participant.py  processors.py  prompts.py  pyproject.toml  runner.py  start_bot.json.example  system_prompt.json.example  talking_animation.py
features/: wishlist.md
frontend/: components.json  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/components/: App.tsx
frontend/components/StoryTranscript/: StoryTranscript.module.css
frontend/components/UserInputIndicator/: UserInputIndicator.module.css
frontend/components/VideoTile/: VideoTile.module.css
frontend/components/WaveText/: WaveText.module.css
logs/: two_participants.txt
tests/: test_conversation_processor.py  test_conversation_processor_e2e.py
utils/: daily_helpers.py  helpers.py
